<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <View
        android:id="@+id/gradientHolder"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="@drawable/gradient_survey_free_text"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="@id/surveyQuestion"/>

    <TextView
        android:id="@+id/cancel"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:padding="@dimen/activity_margin"
        style="@style/SemiBold16"
        android:text="@string/cancel"
        android:textAlignment="textStart"
        android:textColor="@color/white_80"
        app:layout_constraintEnd_toStartOf="@id/vote"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/vote"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:padding="@dimen/activity_margin"
        style="@style/SemiBold16"
        android:textColor="@color/white"
        android:text="@string/action_send"
        android:textAlignment="textEnd"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/cancel"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/surveyQuestion"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:padding="@dimen/activity_margin_lg"
        style="@style/SemiBold20"
        android:textAlignment="center"
        android:textColor="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cancel"/>

    <EditText
        android:id="@+id/optionFreeText"
        style="@style/Regular18"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_margin="@dimen/activity_margin_lg"
        android:hint="@string/survey_hint_free_text"
        android:scrollbars="vertical"
        android:background="@null"
        android:gravity="start"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/surveyQuestion" />

</androidx.constraintlayout.widget.ConstraintLayout>