<?xml version="1.0" encoding="utf-8"?>
<!--
  Copyright (c) 2018. Highlanders LLC - All Rights Reserved
  Unauthorized copying of this file, via any medium is strictly prohibited.
  Proprietary and confidential.
  -->

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white">

    <include layout="@layout/bar_tool_simple_back"
        android:id="@+id/toolbar"/>

    <!-- INFO: 2019-10-16    no REQUESTS -> no tabs -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:weightSum="1"
        android:baselineAligned="false"
        android:gravity="center_horizontal"
        android:layout_marginTop="@dimen/activity_margin"
        android:layout_marginBottom="@dimen/activity_margin"
        android:visibility="gone"
        >

        <FrameLayout
            android:id="@+id/tab_notification"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:paddingStart="12dp"
            android:paddingEnd="12dp"
            android:layout_weight=".5">

            <TextView
                android:id="@+id/tab_notification_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:gravity="center"
                android:paddingTop="8dp"
                android:paddingBottom="8dp"
                style="@style/Regular18"
                android:text="@string/notifications_title"
                android:textColor="@color/state_list_custom_tab"
                android:background="@drawable/background_custom_tab" />
        </FrameLayout>

        <FrameLayout
            android:id="@+id/tab_requests"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:paddingStart="12dp"
            android:paddingEnd="12dp"
            android:layout_weight=".5"
            android:visibility="visible">

            <TextView
                android:id="@+id/tab_requests_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:gravity="center"
                android:paddingTop="8dp"
                android:paddingBottom="8dp"
                style="@style/Regular18"
                android:text="@string/requests_title"
                android:textColor="@color/state_list_custom_tab"
                android:background="@drawable/background_custom_tab"/>
        </FrameLayout>
    </LinearLayout>

    <androidx.swiperefreshlayout.widget.SwipeRefreshLayout
        android:id="@+id/swipe_refresh_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <FrameLayout
            android:id="@+id/inner_circle_pages_container"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rv_notifications"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                style="@style/ScrollbarStyle"
                android:visibility="visible"/>

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rv_requests"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:visibility="gone"
                style="@style/ScrollbarStyle"/>

            <TextView
                android:id="@+id/no_notifications"
                style="@style/NoResultStyle"
                android:text="@string/no_result_notifications"
                />
        </FrameLayout>
    </androidx.swiperefreshlayout.widget.SwipeRefreshLayout>
</LinearLayout>